# Last_ros

./: README.md  frames_2026-01-15_23.06.46.gv
install/: local_setup.sh  setup.sh
install/my_robot_controller/lib/my_robot_controller/: camera_viewer.py  nav2_web_interface.py
install/my_robot_controller/share/my_robot_controller/: package.sh
install/my_robot_controller/share/my_robot_controller/cmake/: my_robot_controllerConfig.cmake
install/my_robot_controller/share/my_robot_controller/launch/:  launch_with_camera.launch.py  launch_slam.launch.py
install/my_robot_controller/share/my_robot_controller/nav2_web_interface/: unified_hospital_controller.py
install/my_robot_controller/share/my_robot_controller/rviz/: robot_view.rviz
install/my_robot_controller/share/my_robot_controller/scripts/: save_map.sh
install/my_robot_controller/share/my_robot_controller/web_interface/: nav2_hospital_interface.py  web_control_interface.py
install/my_robot_controller/share/my_robot_controller/web_interface/templates/: control_interface.html
install/my_robot_controller/share/my_robot_controller/worlds/: hospital_world.world
log/: latest_build
src/: hospital_map.pgm
src/my_robot_controller/: CMakeLists.txt  hospital_map.pgm  hospital_map.yaml  package.xml
src/my_robot_controller/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
src/my_robot_controller/description/: robot.urdf.xacro
src/my_robot_controller/launch/: launch_navigation.launch.py  launch_navigation_slam.launch.py  launch_sim.launch.py
src/my_robot_controller/maps/: hospital_map.pgm  hospital_map.yaml
src/my_robot_controller/nav2_web_interface/: nav2_hospital_interface.py  unified_web_interface.py
src/my_robot_controller/rviz/:  camera_view.rviz  nav2_view.rviz  slam_view.rviz
